################################################################################
# Package: DetFCCeeHCalTile
################################################################################
gaudi_subdir(DetFCCeeHCalTile v1r0)

install(DIRECTORY ${CMAKE_CURRENT_LIST_DIR}/compact DESTINATION ${CMAKE_INSTALL_DATADIR}/${CMAKE_PROJECT_NAME}/Detector/DetFCCeeHCalTile)


