################################################################################
# Package: DetFCCehBaseline1
################################################################################
gaudi_subdir(DetFCCehBaseline1 v1r0)

install(DIRECTORY ${CMAKE_CURRENT_LIST_DIR}/compact DESTINATION ${CMAKE_INSTALL_DATADIR}/Detector/DetFCCehBaseline1)
